Fix Dialog css on IE
git-svn-id: svn://svn.liferay.com/repos/public/alloy/trunk@36453 05bdf26c-840f-0410-9ced-eb539d925f36

--- a/themes/base/css/dialog.css
+++ b/themes/base/css/dialog.css
@@ -20,7 +20,7 @@
 	border-color: #fff #999 #999 #bbb;
 	padding: 10px;
 	background: #fff;
-	overflow: auto;
+	overflow-y: auto;
 }
 .aui-dialog .aui-widget-ft {
 	border: 1px solid #ccc;
@@ -28,6 +28,7 @@
 	padding: 5px 10px;
 	text-align: right;
 	background: #fff;
+	visibility: inherit;
 }
 
 .aui-dialog-close {
